# tiralabra-2025

./: .coverage  .gitignore  README.md  pyproject.toml
documentation/: Kayttoohje.md  Maarittely.md  Testaus.md  Toteutus.md
documentation/others/: jps_considerations.txt  jps_pseudo.txt  jps_straight_forced_neighbors_memo.txt
src/: index.py
src/algo/: algorajapinta.py  astar.py  jps.py
src/assets/: arena2.map
src/logic/: mapreader.py  traversallogic.py
src/tests/: astar_test.py  jps_test.py  traversallogic_test.py
src/tests/testassets/: testmap.map  testmap2.map
src/ui/: visual_ui.py
