[tool.poetry]
name = "graphtraversal2025"
version = "0.1.0"
description = "Reittialgoritmien vertailu"
authors = ["Mvaaras <mvaaras@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pygame = "^2.6.1"
pylint = "^3.3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
